# f-jira

./: .gitignore  README.md  pyproject.toml
src/f_jira/: __init__.py  api.py  app.py  confluence_api.py  db.py  export.py  main.py
